# pseudo_jaro_winkler

./: .gitignore  .ignore  .python-version  CONTRIBUTING.md  Cargo.toml  NOTICE.txt  batch.py  jfish.py  matching.txt  readme.md  source.s
.cargo/: config.toml
benches/: pseudo_jaro_winkler.rs  rlink.rs
input/: file_a.txt  file_a_small.txt  file_b.txt  lnames_a.txt  lnames_a_small.txt  lnames_b.txt
other_langs/: batch.py  create_lastnames.py  jfish.py  lookup_batch.py
src/: lib.rs  main.rs  main_old.rs  main_simd.rs
tests/answer/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
tests/output/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
