[package]
name = "rlink"
version = "0.1.0"
authors = ["Jacob Wellington <jakew@umn.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
format-bytes = "0.2.2"
bytelines = "2.2.2"
eddie = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.1"
bincode = "1.3.3"
csv = "1.1"
strsim = "0.10.0"
rayon = "*"
indicatif = { version = "*", features = ["rayon"] }
statistical = "*"
clap = "2.33.3"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "rlink"
harness = false

[profile.test]
opt-level=3
overflow-checks = false
